# system-design-lab

./: README.md
lab1/: README.md  workspace.dsl
lab2/: README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt
lab2/app/: auth.py  database.py  main.py  schemas.py
lab2/scripts/: export_openapi.py
lab2/tests/: cancel_booking.bash  check_bookings.bash  check_customer_bookings.bash  conftest.py  create_hotel.bash  test_api.py
lab3/: README.md  docker-compose.yaml  optimization.md  requirements.txt
lab3-userver/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  queries.sql  static_config.yaml
lab3-userver/src/: handlers.cpp  handlers.hpp  main.cpp  security.cpp  token_store.cpp  token_store.hpp
lab3/app/: auth.py  database.py  main.py  schemas.py
lab4/: README.md  docker-compose.yml  queries.js  requirements.txt  schema_design.md  validation.js
lab4-userver/: CMakeLists.txt  Dockerfile  README.md  data.js  docker-compose.yml  static_config.yaml
lab4-userver/src/: handlers.cpp  handlers.hpp  http_utils.hpp  main.cpp  security.cpp  security.hpp  token_store.cpp  token_store.hpp
lab4/app/: auth.py  database.py  main.py  schemas.py
lab5/: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  performance_design.md  schema.sql  secure_data.json  static_config.yaml
lab5/scripts/: check_hw05_userver.ps1
lab5/src/: handlers.cpp  handlers.hpp  http_utils.hpp  main.cpp  security.hpp  token_store.hpp
